src/test/ui/similar-tokens.stderr
error: expected one of `,`, `::`, `as`, or `}`, found `.`
  --> $DIR/similar-tokens.rs:11:10
   |
LL | use x::{A. B};
   |          ^
   |          |
   |          expected one of `,`, `::`, `as`, or `}`
   |          help: missing `,`

error: aborting due to previous error

